# Aruco_Arrow_nav

./: README.md  package.xml  setup.py
config/: bridge.yaml  display.rviz
launch/: display.launch.py  gazebo.launch.py
meshes/: GPS__1.stl  _IMU_1.stl  left_wheel_1.stl  right_wheel__1.stl
mr_robot_description.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: gazebo.launch.py
urdf/: materials.xacro  mr_robot_description.gazebo  mr_robot_description.trans  mr_robot_description.xacro
worlds/: aruco.sdf
