<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
<name>mr_robot_description</name>
  <version>0.0.0</version>
<description>The mr_robot_description package</description>
  <maintainer email="adityadevsingh16@gmail.com">author</maintainer>
  <license>Apache-2.0</license>
  
  <!-- ROS 2 categorizes dependencies into build-time, runtime, and test dependencies. -->
  <!-- <buildtool_depend>ament_python</buildtool_depend> -->
  <depend>xacro</depend>
  <depend>rviz2</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <!-- <depend>rclpy</depend>    - The generic dependency on 'rclpy' is redundant with: exec_depend -->
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_image</depend>
  <depend>ros_gz_sim</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
